--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,4 @@
+<% if logged_in? %>
 <h1>タスク一覧</h1>
 
 <ul>
@@ -7,3 +8,13 @@
 </ul>
 
 <%= link_to '新規タスクの登録', new_task_path %>
+<%= link_to 'ログアウト', logout_path, method: :delete %>
+           
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to the Tasks</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
